fixed broken layout

--- a/pokemon-finder/css/main.css
+++ b/pokemon-finder/css/main.css
@@ -26,8 +26,8 @@ body  {
 
 .red {
   color: white;
-  height: 100%;
-  padding: 20px 20px 0px 20px;
+  min-height: 100px;
+  padding: 20px;
   background-color: #e70000;
   border-radius: 15px 15px 0px 0px;
 }
